# tsc

./: ARCHITECTURE.md  README.md  pyproject.toml
tests/: test_completer.py  test_interpreter.py
tsc/: __init__.py  __main__.py  app.py  completer.py  keybindings.py  lexer.py  style.py  validator.py
tsc/interpreter/: __init__.py  core.py  integrals.py  parsers.py
